--- a/Report/setting/codestyle.tex
+++ b/Report/setting/codestyle.tex
@@ -76,10 +76,10 @@
 
 % JavaScript
 \lstdefinelanguage{JavaScript}{
-	morekeywords={ import, class, export, @NgModule, from, @Component, implements, extends,  @Input, @Output, new, return, @Pipe, public, private, interface, enum, @Injectable, constructor, declarations, imports, providers,  schemas, bootstrap, export, true, false}, % keywords
+	morekeywords={ import, class, export, @NgModule, from, @Component, implements, extends,  @Input, @Output, new, return, @Pipe, public, private, interface, enum, @Injectable, constructor, declarations, imports, exports, providers,  schemas, bootstrap, export, true, false}, % keywords
 	basicstyle=\ttfamily \color{black} \small \smaller,
 	emphstyle={\color{vs_class}},
-	emph={ AssignmentSearchComponent, AssignmentEditComponent, PipeModule, ModalModule, TooltipModule, ModelViewModul, TimepickerModule, FormsModule, CommonModule, assignmentRouting, AssignmentComponent, AssignmentOverviewComponent, AssignmentService, AssignmentModule, NgModule, OnInit, NavItemComponent, Component, EventEmitter, Input, Output, AngularMenuItem, Pipe, PipeTransform, BooleanYesNoPipe, boolean, string, Injectable, ElectronService, MenuItemService, AngularMenuItem, Electron, MenuItem, BrowserModule, AppModule, MenuModule, AppComponent, AppRoutingModule, AuthGuard, HTTP_INTERCEPTORS, HttpClientErrorInterceptor, AuthenticationInterceptor, ElectronUrlInterceptor, CUSTOM_ELEMENTS_SCHEMA }, % classnames
+	emph={ AssignmentSearchComponent, AssignmentEditComponent, PipeModule, ModalModule, TooltipModule, ModelViewModul, TimepickerModule, FormsModule, CommonModule, assignmentRouting, AssignmentComponent, AssignmentOverviewComponent, AssignmentService, AssignmentModule, NgModule, OnInit, NavItemComponent, Component, EventEmitter, Input, Output, AngularMenuItem, Pipe, PipeTransform, BooleanYesNoPipe, boolean, string, Injectable, ElectronService, MenuItemService, AngularMenuItem, Electron, MenuItem, BrowserModule, AppModule, MenuModule, AppComponent, AppRoutingModule, AuthGuard, HTTP_INTERCEPTORS, HttpClientErrorInterceptor, AuthenticationInterceptor, ElectronUrlInterceptor, CUSTOM_ELEMENTS_SCHEMA, RouterModule, ChangePasswordComponent, LoginComponent, RegisterComponent, ResetPasswordComponent, LogoutComponent, SecurityRoutingModule }, % classnames
 	showspaces=false,
 	showtabs=false,
 	breaklines=true,
@@ -130,7 +130,7 @@
 		% More tags...
 		<canvas, /canvas>, <svg, <rect, <animateTransform, </rect>, </svg>, <video, <source, <iframe, </iframe>, </video>, <image, </image>, <header, </header, <article, </article,
 		%Angular Tags
-		<mat-expansion-panel, </mat-expansion-panel, <mat-expansion-panel-header, </mat-expansion-panel-header, <mat-panel-title, </mat-panel-title, <app-nav-item, </app-nav-item, <mat-list-item, </mat-list-item
+		<mat-expansion-panel, </mat-expansion-panel, <mat-expansion-panel-header, </mat-expansion-panel-header, <mat-panel-title, </mat-panel-title, <app-nav-item, </app-nav-item, <mat-list-item, </mat-list-item, <mat-toolbar, </mat-toolbar, <mat-icon, <mat-sidenav, </mat-sidenav, </mat-icon, <button, </button, <mat-sidenav-container, </mat-sidenav-container,  <mat-nav-list, </mat-nav-list, <mat-sidenav-content, </mat-sidenav-content, <span, </span, <router-outlet, </router-outlet
 	},
 	emph={
 	*ngFor=, *ngIf=, *ngSwitchCase=
