described dependency injection and interception

--- a/Report/pages/angular/structure.tex
+++ b/Report/pages/angular/structure.tex
@@ -60,7 +60,7 @@ Angular services are written in \gls{ts}. They are a class with the \lstcode{@In
 Services are used to encapsulate functionality which helps promote reusability and modularity. To determine whether a method should be implemented in a service or a component, the question is: Is the method related to how something is displayed? If the answer to this question is yes, then the method should be implemented in a component, if the answer is no, it should be implemented in a service class.
 
 
-\Subsection{Modules}
+\Subsection[ngmodules]{Modules}
 
 When talking about modules in an Angular application, it is important to distinguish between Angular modules, also called NgModules, and \gls{js} (ES2015) modules. Those two are different concepts and can be used side by side. While \gls{js} modules are used to manage collections of \gls{js} objects, NgModules are more like containers for related chunks of code. An NgModule contains components, services, and/or other codes files which all belong to one domain, a workflow, or are performing similar tasks. From an architectural perspective they bear great resemblance to a code library like a \gls{dll}. Like \gls{dll}s, they can import other NgModules and choose which classes, services, and/or components should be exported and which should only be visibile to classes inside the NgModule in question.
 
@@ -92,3 +92,11 @@ One very important feature of the Angular routing system is that of Guards. A Gu
 Angular also allows the use of asynchronous routing, also called lazy loading. This is useful if certain parts of the application are rarly used or only used by a small amout of users. In this case the application is seperated into junks and only the needed code parts are served in the initial loading of the applicaiton. Once the user accesses a route to a module which is not yet loaded Angular will trigger the download of the missing module and display it as soon as the download finished. This will improve initial loading times but some routes may still be slow as they have to be loaded on demand. It is also possible to configure the RoutingModule to prioritize certain parts of the application. In this case the initial download would contain the index page as well as comonly used modules. Once they are loaded and displayed the RouterModule will download the remaining modules in the background. This will improve initial loading times without the drawback of bottlenecks later on. It should be noted that even if a module is configured to laod asynchronously if there exists a reference in some other component it will be loaded with the initial chunk since it is a dependency.
 
 \Subsubsection{Dependency Injection and Interception}
+
+The Angular framework relys heavly on \gls{di} and since version 4.3 \cite{interceptorAngularVersion} also offers Interception. As described in \myref{subsec:ngmodules} the configuration of Angulars \gls{di} capabilities is achieved through an NgModules metadata. Every component as well as provider listed in the module can be requested. Additionally it is possible to configure providers in the \lstcode{@Injectable()} and \lstcode{@Component()} decorators. In doing so the configuration will override any configuration done at the NgModule level. To make the injection work Angular uses its own \lstcode{Injector} class. Instances of this class are created by the framework and the developer doesn't have to touch them in most cases. Though if a certain action requires it it is possible to create and manipulate instances of this class. Every service is a singleton inside its scope which is the \lstcode{Injector} instance. Angular automatically nests \lstcode{Injector} instances. Every component has its own \lstcode{Injector} instance which mirrors the components tree structure (see \revMark{INSERT figure Angular component tree}). A request bubbles up from the \lstcode{Injector} instance of the component it was requested in. The first \lstcode{Injector} which can satisfy the request is used to resolve the dependency.
+
+As of version 4.3 Angular offers the possibility of interception. Angulars interception is, contrary to other \gls{di} frameworks where any class can be intercepted, limited to only the \lstcode{HttpClient} class. To specify an or multiple interceptors the developer has to configure a provider as shown in \mylineref{lst:app-module.ts}{module_interceptor}.
+
+\file{authentication-interceptor.ts}{The Jukebox intercetor to automatically include a JWT Token.}{JavaScript}
+
+The interceptor is a class which implements the \lstcode{HttpInterceptor} interface and therefore the \\ \lstcode{intercept((req: HttpRequest<any>, next: HttpHandler): \\ \hspace*{1cm} Observable<HttpEvent<any>>} \\ method. In the Jukebox project it was used to automatically include a \gls{jwt} as well as the \enquote{Content-Type} header (\myautoref{lst:authentication-interceptor.ts}). With this technuiqe it is also possible to catch any request which returned a 401 \gls{http} status code, get a new \gls{jwt} access token and then retry the request without any service noticing that the initial request failed.
