--- a/Report/pages/angular/structure.tex
+++ b/Report/pages/angular/structure.tex
@@ -68,35 +68,34 @@ When talking about modules in an Angular application, it is important to disting
 
 NgModules are \gls{ts} classes which are decorated with the \lstcode{NgModule()} annotation (\mylineref{lst:app-module.ts}{module_decorator}). Oftentimes the class is completly empty, since the decorator arguments are the important part of the module, essentially the module's metadata. Each application has to have at least one module, the AppModule.
 
-The \textbf{declarations} argument (\mylineref{lst:app-module.ts}{module_declarations}) is used to declare all components which are part of this module. If a module wants to import other modules those modules need to be listed \revMark{for} the \textbf{imports} argument (\mylineref{lst:app-module.ts}{module_imports}). If the developer chooses to encapsulate the routing configurations into separate modules these modules should always be last to avoid \revMark{dependency chain issues}. The \textbf{exports} argument (\mylineref{lst:app-module.ts}{module_exports}) defines which components, services, and/or modules are visible to other modules which import this module. Angulars \gls{di} configuration is strongly tied to its NgModules. The \textbf{providers} argument references all services, pipes as well as guards the developer wants \revMark{to be able to inject}. It is als possible to use interception, which has to be defined here as well. To be able to use custom \gls{html} tags (see \myref{subsec:components}) the \lstcode{CUSTOM\_ELEMENTS\_SCHEMA} musst be included under in the \textbf{schemas} argument. The \textbf{bootstrap} argument is rarly used, unsully in the AppModule. All components which are added here are marked as entry components for the app start.
+The \textbf{declarations} argument (\mylineref{lst:app-module.ts}{module_declarations}) is used to specify all components which are part of this module. If a module wants to import other modules, those modules need to be listed using the \textbf{imports} argument (\mylineref{lst:app-module.ts}{module_imports}). If the developer chooses to encapsulate the routing configurations into separate modules, these modules should always be the last ones to avoid dependency issues. The \textbf{exports} argument (\mylineref{lst:app-module.ts}{module_exports}) defines which components, services, and/or modules are visible to other modules which import this module. Angular's \gls{di} configuration is strongly tied to its NgModules. The \textbf{providers} argument references all services, pipes, and guards the developer wants to be available for injection. It is also possible to use interception, which has to be defined here as well. To be able to use custom \gls{html} tags (see \myref{subsec:components}), the \lstcode{CUSTOM\_ELEMENTS\_SCHEMA} must be included under the \textbf{schemas} argument. The \textbf{bootstrap} argument is rarely used, unsually in the AppModule. All components which are added here are marked as entry components for the app start.
 
 \Subsubsection[routing]{Routing}
 
-Every Angular application is a \gls{spa} which means that the client downloads the entire webapplication in the beginning and keeps it in cache to enable faster response times once the app is loaded. This also means that normal navigation through different \enquote{subsites} of a website will not trigger the browser to download new \gls{html} and thus these \enquote{subsites} do not exist in the traditional sense. Even though it is called a \textbf{Single} Page Application displaying a gigantic site with everything in it is not very userfriendly or lucid. Therefore Angular offers its own routing.
+Every Angular application is a \gls{spa}, which means that the client downloads the entire web application in the beginning and keeps it in cache to enable faster response times once the app is loaded. This also means that normal navigation through different \enquote{subsites} of a website will not trigger the browser to download new \gls{html} and thus these \enquote{subsites} do not exist in the traditional sense. Even though it is called a \textbf{Single} Page Application, displaying a gigantic site with everything in it is unwieldy and not user-friendly. Therefore, Angular offers its own routing.
 
-\file{navigation-bar.html}{The Jukebox Navigationbar and router-outlet.}{HTML5}
+\file{navigation-bar.html}{The Jukebox navigation bar and router-outlet.}{HTML5}
 
-Routing is done through the \lstcode{<router-outlet></router-outlet>} tags in \gls{html} and the RouterModule. The \lstcode{<outer-outlet />} tag tells Angular that at this location in the \gls{dom} the developer wan
-ts to display different \enquote{subsites}. Usually an application has some kind of Menu or Navigationbar defined which is always visible and then the rest of content is displayed through the router outlet, as shown in \mylineref{lst:navigation-bar.html}{navbar_router}.
+Routing is done through the \lstcode{<router-outlet></router-outlet>} tags in \gls{html} and the \lstcode{RouterModule}. The \lstcode{<router-outlet />} tag tells Angular that the developer wants to display different \enquote{subsites} at this location in the \gls{dom}. Usually an application has some kind of menu or navigation bar which is always visible and then the rest of content is displayed through the router outlet, as shown in \mylineref{lst:navigation-bar.html}{navbar_router}.
 
-Angulars routing module also changes the URL in the browsers adressbar. This allows for deeplinks into the site but also requires any webserver which serves this \gls{spa} to return the same \gls{html} for all URLs whithout a redirect to the index.html route or otherwise it would break Angulars routing.
+Angular's routing module also changes the URL in the browser's address bar. This allows for deep links into the site, but also requires any web server which serves this \gls{spa} to return the same \gls{html} for all URLs whithout a redirect to the index.html route, or otherwise it would break Angular's routing.
 
 \file{security-routing-module.ts}{The Jukebox security route definitions.}{JavaScript}
 
-To define the application routes and map their components the \lstcode{RouterModule.forRoot} or \lstcode{RouterModule.forChild} methods are used (\mylineref{lst:security-routing-module.ts}{routing_forChild}). The \lstcode{RouterModule.forRoot} method may only be called once and is usually located in the app-routing.module.ts file. Following the Angular codestyle guidelines every module should have its own routing module. This is possible through the \lstcode{RouterModule.forChild} method which may be called as often as needed.
+To define the application routes and map their components, the \lstcode{RouterModule.forRoot} or \lstcode{RouterModule.forChild} methods are used (\mylineref{lst:security-routing-module.ts}{routing_forChild}). The \lstcode{RouterModule.forRoot} method may only be called once and is usually located in the app-routing.module.ts file. Following the Angular code style guidelines, every module should have its own routing module. This is possible through the \lstcode{RouterModule.forChild} method which may be called as often as needed.
 
-Each route needs to have the \textbf{path} argument set. Then if its a simple route which maps to a \textbf{component}, the component in question must be specified (\mylineref{lst:security-routing-module.ts}{routing_simpleComponent}). A route can also be used to organize and therefore doesn't have a component assigned but multiple routes (\mylineref{lst:security-routing-module.ts}{routing_children}). This is usually done once per module and allows the developer to keep the routes meaningful. There are many more arguments like path matching strategies or setting specific router-outlets.
+The \textbf{path} argument must be set for each route. In case of a simple route, which maps to a \textbf{component}, the component in question must be specified (\mylineref{lst:security-routing-module.ts}{routing_simpleComponent}). A route can also be used as an organizing element for the application's URLs and so may not have a component but multiple routes (\mylineref{lst:security-routing-module.ts}{routing_children}). This is usually done once per module and allows the developer create well-structured URLs. There are many more arguments which define details such as path matching strategies or specific router-outlets.
 
-One very important feature of the Angular routing system is that of Guards. A Guard is a method which is called by the RouterModule if a certain condition is met. They are similar to the component lifecycle hooks. Guards are specified in the route configuration, as shown in \mylineref{lst:security-routing-module.ts}{routing_guard}. The conditions are \lstcode{canActivate}, \lstcode{canActivateChildren}, \lstcode{canDeactive}, \lstcode{canDeactivateChildren}, and \lstcode{canLoad}. Guards are always invoced after a navigation was queried but before it is completed. The return value is of type \lstcode{Observable<boolean>}, \lstcode{Promise<boolean>}, or \lstcode{boolean} and determines if the navigation may proceed. In the example of the \lstcode{AuthGuard} (\mylineref{lst:security-routing-module.ts}{routing_guard}) the \lstcode{AuthenticationService.isLoggedIn()} method is used to determin if the user was logged in and can therefore now be logged out.
+One very important feature of the Angular routing system is that of guards. A guard is a method which is called by the \lstcode{RouterModule} if a certain condition is met. Guards are similar to the component lifecycle hooks. They are specified in the route configuration, as shown in \mylineref{lst:security-routing-module.ts}{routing_guard}. The conditions are \lstcode{canActivate}, \lstcode{canActivateChildren}, \lstcode{canDeactive}, \lstcode{canDeactivateChildren}, and \lstcode{canLoad}. Guards are always invoked after a navigation is queried, but before it is completed. The return value is of type \lstcode{Observable<boolean>}, \lstcode{Promise<boolean>}, or \lstcode{boolean} and determines whether the navigation may proceed. In the example of the \lstcode{AuthGuard} (\mylineref{lst:security-routing-module.ts}{routing_guard}), the \lstcode{AuthenticationService.isLoggedIn()} method is used to determine whether the user was logged in and can therefore now be logged out.
 
-Angular also allows the use of asynchronous routing, also called lazy loading. This is useful if certain parts of the application are rarly used or only used by a small amout of users. In this case the application is seperated into junks and only the needed code parts are served in the initial loading of the applicaiton. Once the user accesses a route to a module which is not yet loaded Angular will trigger the download of the missing module and display it as soon as the download finished. This will improve initial loading times but some routes may still be slow as they have to be loaded on demand. It is also possible to configure the RoutingModule to prioritize certain parts of the application. In this case the initial download would contain the index page as well as comonly used modules. Once they are loaded and displayed the RouterModule will download the remaining modules in the background. This will improve initial loading times without the drawback of bottlenecks later on. It should be noted that even if a module is configured to laod asynchronously if there exists a reference in some other component it will be loaded with the initial chunk since it is a dependency.
+Angular also allows the use of asynchronous routing, also called lazy loading. This is useful if certain parts of the application are rarely used, or only used by a small number of users. In this case, the application is separated into several chunks and only the needed code parts are served during the initial loading of the application. Once the user accesses a route to a module which is not yet loaded, Angular will trigger the download of the missing module and display it as soon as the download has finished. This will improve initial loading times, but some routes may still be slow, as they have to be loaded on demand. It is also possible to configure the \lstcode{RoutingModule} in a certain way which prioritizes the important parts of the application. In this case, the initial download might contain the index page as well as commonly-used modules. Once they are loaded and displayed, the \lstcode{RouterModule} will download the remaining modules in the background. This will improve initial loading times without the drawback of bottlenecks later on. It should be noted that even if a module is configured to load asynchronously, it will be loaded with the initial chunk in case it is referenced in some other component. This is due to the fact that the other component depends on this module.
 
 \Subsubsection{Dependency Injection and Interception}
 
-The Angular framework relys heavly on \gls{di} and since version 4.3 \cite{interceptorAngularVersion} also offers Interception. As described in \myref{subsec:ngmodules} the configuration of Angulars \gls{di} capabilities is achieved through an NgModules metadata. Every component as well as provider listed in the module can be requested. Additionally it is possible to configure providers in the \lstcode{@Injectable()} and \lstcode{@Component()} decorators. In doing so the configuration will override any configuration done at the NgModule level. To make the injection work Angular uses its own \lstcode{Injector} class. Instances of this class are created by the framework and the developer doesn't have to touch them in most cases. Though if a certain action requires it it is possible to create and manipulate instances of this class. Every service is a singleton inside its scope which is the \lstcode{Injector} instance. Angular automatically nests \lstcode{Injector} instances. Every component has its own \lstcode{Injector} instance which mirrors the components tree structure (see \revMark{INSERT figure Angular component tree}). A request bubbles up from the \lstcode{Injector} instance of the component it was requested in. The first \lstcode{Injector} which can satisfy the request is used to resolve the dependency.
+The Angular framework relies heavily on \gls{di} and, as of version 4.3 \cite{interceptorAngularVersion} also offers Interception. As described in \myref{subsec:ngmodules}, the configuration of Angular's \gls{di} capabilities is achieved through the metadata of NgModules. Every component and provider listed in the module can be requested. Additionally, it is possible to configure providers in the \lstcode{@Injectable()} and \lstcode{@Component()} decorators. In doing so, the configuration will override any configuration done at the NgModule level. To make the injection work, Angular uses its own \lstcode{Injector} class. Instances of this class are created by the framework and the developer doesn't have to touch them in most cases. Though, if required by a certain action, it is possible to create and manipulate instances of this class. Every service is a singleton inside its scope, which is the \lstcode{Injector} instance. Angular automatically nests \lstcode{Injector} instances. Every component has its own \lstcode{Injector} instance which mirrors the component tree structure (see \revMark{INSERT figure Angular component tree}). A request bubbles up from the \lstcode{Injector} instance of the component it was requested in. The first \lstcode{Injector} which can satisfy the request is used to resolve the dependency.
 
-As of version 4.3 Angular offers the possibility of interception. Angulars interception is, contrary to other \gls{di} frameworks where any class can be intercepted, limited to only the \lstcode{HttpClient} class. To specify an or multiple interceptors the developer has to configure a provider as shown in \mylineref{lst:app-module.ts}{module_interceptor}.
+As of version 4.3 Angular offers the possibility of interception. Angular's interception is limited to only the \lstcode{HttpClient} class, contrary to other \gls{di} frameworks where any class can be intercepted. To specify one or multiple interceptors, the developer has to configure a provider as shown in \mylineref{lst:app-module.ts}{module_interceptor}.
 
-\file{authentication-interceptor.ts}{The Jukebox intercetor to automatically include a JWT Token.}{JavaScript}
+\file{authentication-interceptor.ts}{The Jukebox interceptor to automatically include a JWT Token.}{JavaScript}
 
-The interceptor is a class which implements the \lstcode{HttpInterceptor} interface and therefore the \\ \lstcode{intercept((req: HttpRequest<any>, next: HttpHandler): \\ \hspace*{1cm} Observable<HttpEvent<any>>} \\ method. In the Jukebox project it was used to automatically include a \gls{jwt} as well as the \enquote{Content-Type} header (\myautoref{lst:authentication-interceptor.ts}). With this technuiqe it is also possible to catch any request which returned a 401 \gls{http} status code, get a new \gls{jwt} access token and then retry the request without any service noticing that the initial request failed.
+The interceptor is a class which implements the \lstcode{HttpInterceptor} interface and thus the \\ \lstcode{intercept((req: HttpRequest<any>, next: HttpHandler): \\ \hspace*{1cm} Observable<HttpEvent<any>>} \\ method. In the Jukebox project, it was used to automatically include a \gls{jwt} as well as the \enquote{Content-Type} header (\myautoref{lst:authentication-interceptor.ts}). With this technique it is also possible to catch any request which returns a 401 \gls{http} status code, get a new \gls{jwt} access token and then retry the request without any service noticing that the initial request failed.
