--- a/Report/res/bib/citavi.bib
+++ b/Report/res/bib/citavi.bib
@@ -26,6 +26,15 @@
 }
 
 
+@online{angularMaterial,
+ author = {Google},
+ year = {2018},
+ title = {Angular Material},
+ url = {https://material.angular.io},
+ urldate = {2018-07-12}
+}
+
+
 @online{angularTemplateSyntax,
  author = {Google},
  year = {2018},
