--- a/Report/setting/glossary.tex
+++ b/Report/setting/glossary.tex
@@ -45,3 +45,4 @@
 \newacronym{ts}{TS}{TypeScript}
 \newacronym{dom}{DOM}{Document Object Model}
 \newacronym{wpf}{WPF}{Windows Presentation Foundation}
+\newacronym{cli}{CLI}{Command Line Interface}
