--- a/Report/res/bib/citavi.bib
+++ b/Report/res/bib/citavi.bib
@@ -184,6 +184,15 @@
 }
 
 
+@online{fontAwesome,
+ author = {Fonticons, Inc.},
+ year = {2018},
+ title = {Font Awesome},
+ url = {https://fontawesome.com/},
+ urldate = {2018-07-13}
+}
+
+
 @online{inter,
  author = {Practices, Microsoft Patterns {\&}.},
  year = {04.2013},
@@ -219,6 +228,24 @@
  url = {http://www.entityframeworktutorial.net/EntityFramework4.3/lazy-loading-with-dbcontext.aspx},
  address = {http://www.entityframeworktutorial.net},
  urldate = {2017-02-24}
+}
+
+
+@online{matDialog,
+ author = {Google},
+ year = {2018},
+ title = {Angular Material Dialog},
+ url = {https://material.angular.io/components/dialog/overview},
+ urldate = {2018-07-13}
+}
+
+
+@online{materialIcons,
+ author = {Google},
+ year = {2018},
+ title = {Angular Material Icons},
+ url = {https://v5.material.angular.io/components/icon/overview},
+ urldate = {2018-07-13}
 }
 
 
